Fix dags table overflow (#15660)
Adds a false bottom to the table element so we can have overlap on the final row.

Fixes #15656

--- a/airflow/www/static/css/dags.css
+++ b/airflow/www/static/css/dags.css
@@ -31,6 +31,10 @@
 .dags-table-body {
   margin: 0 1px;
   overflow-x: auto;
+
+  /* This allows small dropdowns to overlap the table element */
+  padding-bottom: 55px;
+  margin-bottom: -55px;
 }
 
 .dags-table-more {
